fix: truncate long ZID in user header (#2639)
* fix: user handle width

* feat: add hover title to user handle
Otherwise, if truncated, user can't see what their full ZID is.
Ideally we would use zUI Tooltip, but the positioning wasn't working properly.

* lint: unused import

--- a/src/components/sidekick/components/current-user-details/components/user-header/styles.scss
+++ b/src/components/sidekick/components/current-user-details/components/user-header/styles.scss
@@ -7,6 +7,7 @@
   align-items: center;
   height: 32px;
   gap: 8px;
+  min-width: 0;
 
   &__avatar-container {
     cursor: pointer;
@@ -42,9 +43,17 @@
     justify-content: flex-start;
     align-items: flex-start;
     gap: 4px;
+    max-width: 100%;
 
     font-size: 10px;
     line-height: 13px;
+
+    span {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 100%;
+    }
   }
 
   &__verify-id-button {
